# difrefrac

./: COPYING  Makefile.in  README  configure  configure.ac  configure.in~  install.sh
autom4te.cache/: requests  traces.0
include/: libdifrefrac.h
libsrc/: Makefile.in  libdifrefrac.c
src/: Makefile.in  difrefrac.cc
